--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
 </head>
 <body>
 
-  <div class="main-wrapper d-flex justify-content-center align-items-center">
+  <div class="main-wrapper d-flex justify-content-center align-items-center flex-column ">
     <div class="grid-container d-flex flex-wrap">
       <!-- <div class="square">X</div> -->
 
       <button class="btn-gioca">Gioca</button>
     </div>
+    
   </div>
 
 
